unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/Federal_Poverty_Guidelines__mdt.object-meta.xml
<CustomObject>
    <label>Federal Poverty Guidelines</label>
    <pluralLabel>Federal Poverty Guidelines</pluralLabel>
</CustomObject>