unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/AK_2__c.field-meta.xml
<CustomField>
    <fullName>AK_2__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for Alaska residents, 2 family members</inlineHelpText>
    <label>AK-2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>