unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/AK_3__c.field-meta.xml
<CustomField>
    <fullName>AK_3__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for Alaska residents, 3 family members</inlineHelpText>
    <label>AK-3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>