unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/AK_Over8__c.field-meta.xml
<CustomField>
    <fullName>AK_Over8__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for Alaska residents, more than 8 Members.</inlineHelpText>
    <label>AK-Over8</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>