unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/HI_1__c.field-meta.xml
<CustomField>
    <fullName>HI_1__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for Hawaii residents, 1 family member</inlineHelpText>
    <label>HI-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>