unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/HI_2__c.field-meta.xml
<CustomField>
    <fullName>HI_2__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for Hawaii residents, 2 family members</inlineHelpText>
    <label>HI-2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>