unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/HI_3__c.field-meta.xml
<CustomField>
    <fullName>HI_3__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for Hawaii residents, 3 family members</inlineHelpText>
    <label>HI-3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>