unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/HI_Over8__c.field-meta.xml
<CustomField>
    <fullName>HI_Over8__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for Hawaii residents, more than 8 members</inlineHelpText>
    <label>HI-Over8</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>