unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/X48_1__c.field-meta.xml
<CustomField>
    <fullName>X48_1__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for contiguous 48 states, 1 family member</inlineHelpText>
    <label>48-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>