unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/X48_2__c.field-meta.xml
<CustomField>
    <fullName>X48_2__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for contiguous 48 states, 2 family members</inlineHelpText>
    <label>48-2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>