unpackaged/main/default/objects/Federal_Poverty_Guidelines__mdt/fields/X48_Over8__c.field-meta.xml
<CustomField>
    <fullName>X48_Over8__c</fullName>
    <inlineHelpText>This contains the federal poverty guidance for contiguous 48 states, more than 8 members</inlineHelpText>
    <label>48-Over8</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>